[package]
name = "libdvb"
version = "0.3.0"
description = "Interface for DVB-API v5 devices in Linux"
authors = ["Cesbo Developers Team <info@cesbo.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/libdvb"
repository = "https://github.com/cesbo/libdvb"
keywords = ["dvb", "ts"]
categories = ["api-bindings", "hardware-support"]
edition = "2021"

[dependencies]
nix = "0.19"
thiserror = "1"
