[package]
name = "libdvb"
version = "0.3.1"
description = "Interface for DVB-API v5 devices in Linux"
authors = ["Cesbo Developers Team <info@cesbo.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/libdvb"
repository = "https://github.com/cesbo/libdvb"
keywords = ["dvb", "ts"]
categories = ["api-bindings", "hardware-support"]
edition = "2021"

[dependencies]
nix = { version = "0.29", features = ["ioctl"] }
thiserror = "1"
